--- a/fileuploader/templates/fileuploader/file_list.html
+++ b/fileuploader/templates/fileuploader/file_list.html
@@ -19,7 +19,12 @@
     <ul>
       {% for file, image_path in word_clouds %}
       <li>
-        <img src="{{ image_path }}" alt="Word Cloud for {{ file.file.name }}" />
+        <img
+          width="100"
+          height="100"
+          src="{{ image_path }}"
+          alt="Word Cloud for {{ file.file.name }}"
+        />
         <p>{{ file.file.name }}</p>
       </li>
       {% endfor %}
