--- a/fileuploader/templates/fileuploader/file_list.html
+++ b/fileuploader/templates/fileuploader/file_list.html
@@ -4,6 +4,7 @@
   <head>
     <title>Uploaded Files</title>
   </head>
+
   <body>
     <h2>Uploaded Files</h2>
     <ul>
@@ -19,13 +20,15 @@
     <ul>
       {% for file, image_path in word_clouds %}
       <li>
-        <img
-          width="100"
-          height="100"
-          src="{{ image_path }}"
-          alt="Word Cloud for {{ file.file.name }}"
-        />
-        <p>{{ file.file.name }}</p>
+        <a href="{% url 'file_detail' file.pk %}">
+          <img
+            width="100"
+            height="100"
+            src="{{ image_path }}"
+            alt="Word Cloud for {{ file.file.name }}"
+          />
+        </a>
+        <a href="{% url 'file_detail' file.pk %}">{{ file.file.name }} </a>
       </li>
       {% endfor %}
     </ul>
