--- a/fileuploader/templates/fileuploader/file_list.html
+++ b/fileuploader/templates/fileuploader/file_list.html
@@ -35,6 +35,24 @@
     </ul>
     {% else %}
     <p>No word clouds available.</p>
+    {% endif %} {% if word_clouds_json %}
+    <ul>
+      {% for file, image_path in word_clouds_json %}
+      <li>
+        <a href="{% url 'file_detail' file.pk %}">
+          <img
+            width="100"
+            height="100"
+            src="{{ image_path }}"
+            alt="Word Cloud for {{ file.file.name }}"
+          />
+        </a>
+        <a href="{% url 'file_detail' file.pk %}">{{ file.file.name }} </a>
+      </li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <p>No word clouds json available.</p>
     {% endif %}
   </body>
 </html>
