--- a/fileuploader/templates/fileuploader/file_detail.html
+++ b/fileuploader/templates/fileuploader/file_detail.html
@@ -9,6 +9,7 @@
 
     <a href="{% url 'file_list' %}">Back to File List</a>
     <a href="{% url 'file_update' pk=file.pk %}">Update File</a>
+    <a href="{% url 'file_delete' pk=file.pk %}">Delete File</a>
 
     {% if not data.empty %}
     <!-- Display CSV data in a table -->
